runtime/dancebox/build.txt
⚡ Found 3 strongly connected components which includes at least one cycle each
cycle(001) ∈ α: DisputeCoordinator ~~{"DisputeDistributionMessage"}~~> DisputeDistribution ~~{"DisputeCoordinatorMessage"}~~>  *
cycle(002) ∈ β: CandidateBacking ~~{"CollatorProtocolMessage"}~~> CollatorProtocol ~~{"CandidateBackingMessage"}~~>  *
cycle(003) ∈ γ: NetworkBridgeRx ~~{"GossipSupportMessage"}~~> GossipSupport ~~{"NetworkBridgeRxMessage"}~~>  *
   Compiling dancebox-runtime v0.1.0 (/home/girazoki/Desktop/tanssi/runtime/dancebox)
error: failed to run custom build command for `dancebox-runtime v0.1.0 (/home/girazoki/Desktop/tanssi/runtime/dancebox)`

Caused by:
  process didn't exit successfully: `/home/girazoki/Desktop/tanssi/target/release/build/dancebox-runtime-deea166848b7c967/build-script-build` (exit status: 1)
  --- stdout
  Information that should be included in a bug report.
  Executing build command: env -u CARGO_ENCODED_RUSTFLAGS -u RUSTC CARGO_TARGET_DIR="/home/girazoki/Desktop/tanssi/target/release/wbuild/dancebox-runtime/target" RUSTC_BOOTSTRAP="1" RUSTFLAGS="-C target-cpu=mvp -C target-feature=-sign-ext -C link-arg=--export-table -Clink-arg=--export=__heap_base -C link-arg=--import-memory  --cfg substrate_runtime " SKIP_WASM_BUILD="" "/home/girazoki/.rustup/toolchains/1.75.0-x86_64-unknown-linux-gnu/bin/cargo" "rustc" "--target=wasm32-unknown-unknown" "--manifest-path=/home/girazoki/Desktop/tanssi/target/release/wbuild/dancebox-runtime/Cargo.toml" "--color=always" "--profile" "release" "-Z" "build-std"
  Using rustc version: rustc 1.75.0 (82e1608df 2023-12-21)


  --- stderr
  warning: unstable feature specified for `-Ctarget-feature`: `sign-ext`
    |
    = note: this feature is not stably supported; its behavior can change in the future

  warning: `tp-maths` (lib) generated 1 warning
  warning: `pallet-services-payment-runtime-api` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-collator-assignment-runtime-api` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-author-noting-runtime-api` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-stream-payment-runtime-api` (lib) generated 1 warning (1 duplicate)
  warning: `tp-traits` (lib) generated 1 warning (1 duplicate)
  warning: `tp-container-chain-genesis-data` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-configuration` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-services-payment` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-data-preservers` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-pooled-staking` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-collator-assignment` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-stream-payment` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-inflation-rewards` (lib) generated 1 warning (1 duplicate)
  warning: `tanssi-relay-encoder` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-registrar` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-invulnerables` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-initializer` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-authority-assignment` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-authority-mapping` (lib) generated 1 warning (1 duplicate)
  warning: unused imports: `Deserialize`, `Serialize`
    --> /home/girazoki/Desktop/tanssi/pallets/xcm-core-buyer/src/lib.rs:23:21
     |
  23 | use frame_support::{Deserialize, Serialize};
     |                     ^^^^^^^^^^^  ^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` on by default

  warning: `pallet-registrar-runtime-api` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-xcm-core-buyer` (lib) generated 2 warnings (1 duplicate) (run `cargo fix --lib -p pallet-xcm-core-buyer` to apply 1 suggestion)
  warning: `tp-author-noting-inherent` (lib) generated 1 warning (1 duplicate)
  warning: `runtime-common` (lib) generated 1 warning (1 duplicate)
  warning: `pallet-author-noting` (lib) generated 1 warning (1 duplicate)
     Compiling dancebox-runtime v0.1.0 (/home/girazoki/Desktop/tanssi/runtime/dancebox)
  error: comparison operators cannot be chained
     --> /home/girazoki/Desktop/tanssi/runtime/dancebox/src/lib.rs:463:40
      |
  463 |                 pallet_treasury::Pallet<R>::deposit_event(pallet_treasury::Event::Deposit { value: to_treasury.peek() })
      |                                        ^ ^
      |
  help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
      |
  463 |                 pallet_treasury::Pallet::<R>::deposit_event(pallet_treasury::Event::Deposit { value: to_treasury.peek() })
      |                                        ++

  warning: unused import: `pallet_balances::NegativeImbalance`
    --> /home/girazoki/Desktop/tanssi/runtime/dancebox/src/lib.rs:73:5
     |
  73 |     pallet_balances::NegativeImbalance,
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` on by default

  error[E0308]: mismatched types
     --> /home/girazoki/Desktop/tanssi/runtime/dancebox/src/lib.rs:461:80
      |
  461 |                 <pallet_treasury::Pallet<R> as OnUnbalanced<_>>::on_unbalanced(to_treasury.peek());
      |                 -------------------------------------------------------------- ^^^^^^^^^^^^^^^^^^ expected `frame_support::traits::Currency::NegativeImbalance`, found `pallet_balances::Config::Balance`
      |                 |
      |                 arguments to this function are incorrect
      |
      = note: expected associated type `<<R as pallet_treasury::Config>::Currency as Currency<<R as frame_system::Config>::AccountId>>::NegativeImbalance`
                 found associated type `<R as pallet_balances::Config>::Balance`
      = note: an associated type was expected, but a different one was found
  note: associated function defined here
     --> /home/girazoki/.cargo/git/checkouts/polkadot-sdk-df3be1d6828443a1/164a5b4/substrate/frame/support/src/traits/tokens/imbalance/on_unbalanced.rs:46:5
      |
  46  |     fn on_unbalanced(amount: Imbalance) {
      |        ^^^^^^^^^^^^^

  For more information about this error, try `rustc --explain E0308`.
  warning: `dancebox-runtime` (lib) generated 1 warning
  error: could not compile `dancebox-runtime` (lib) due to 2 previous errors; 1 warning emitted
